# corgi

./: .dockerignore  .envrc  .gitignore  .helmignore  AGENTS.md  API.md  API_A2A.md  Dockerfile  README.md  docker-compose.yml  shell.nix
.agents/skills/testing-corgi/: SKILL.md
.devcontainer/scripts/: app-chart.sh  env.sh
.github/workflows/: ci.yaml
archive/: .envrc
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  database.py  logging_config.py  main.py  middleware.py  models.py  processing.py  rate_limit.py  schemas.py
backend/app/routers/: admin.py  auth.py  bulk_import.py  categories.py  images.py  issues.py  oidc.py  upload.py  users.py
backend/tests/: test_auth.py  test_categories.py  test_database.py  test_processing.py  test_router_auth.py  test_router_bulk_import.py  test_router_images.py  test_router_upload.py  test_schemas.py
backup/: Dockerfile  README.md  backup.py  pyproject.toml
charts/backend/: values.yaml
charts/backend/templates/: cnpg-cluster.yaml  deployment.yaml  secret-jwt.yaml  secret.yaml  secrets.yaml  vso-static-secrets.yaml
charts/backup/: values.yaml
charts/frontend/: values.yaml
db/: init.sql  seed.sql
docs/: OIDC_SETUP.md  SCALABILITY_PLAN.md  TESTING.md
frontend/: Dockerfile  index.html  nginx.conf.template  package.json
frontend/src/: App.tsx  AuthContext.tsx  api.ts  authContextValue.ts  theme.ts  types.ts
helm/corgi/: values.yaml
src/: composer.json
src/app/: CustomJsonFormatter.php  User.php
src/config/: app.php  auth.php  image.php  ldap.php  ldap_auth.php
(+38 files in other folders)
